[tool.poetry]
name = "pytorch_lightning"
version = "0.1.0"
description = ""
authors = ["Ryan Stout <ryanstout@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
rise = "^5.7.1"
jupyter-contrib-nbextensions = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
